--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,19 +1,66 @@
+# .github/workflows/metrics.yml
 name: Metrics
 on:
   # Schedule daily updates
   schedule: [{cron: "0 0 * * *"}]
-  # (optional) Run workflow manually
+  # Allows to run this workflow manually from the Actions tab
   workflow_dispatch:
-  # (optional) Run workflow when pushing on master/main
+  # Also run on every push on the master branch
   push: {branches: ["master", "main"]}
+
 jobs:
   github-metrics:
     runs-on: ubuntu-latest
-    environment: 
-      name: production
     permissions:
       contents: write
     steps:
       - uses: lowlighter/metrics@latest
         with:
-          token: ${{ secrets.METRICS_TOKEN }}
+          # Your GitHub token
+          # This is automatically provided by GitHub Actions
+          token: ${{ secrets.GITHUB_TOKEN }}
+
+          # OPTIONS
+          user: ABHutton
+          base: header, activity, community, repositories, metadata
+          config_timezone: Africa/Johannesburg  # Set your timezone
+          
+          # PLUGINS
+          plugins: >
+            # General Stats (lines of code, etc.)
+            base
+            
+            # Most used languages
+            languages
+            
+            # Isometric Contribution Calendar
+            isocalendar
+            
+            # GitHub Community Stats
+            community
+            
+            # Spotify recent activity (see note below)
+            spotify
+            
+            # WakaTime stats (see note below)
+            wakatime
+            
+          # PLUGIN-SPECIFIC OPTIONS
+          # Languages plugin options
+          plugin_languages_limit: 8
+          plugin_languages_threshold: 0%
+          
+          # Isocalendar plugin options
+          plugin_isocalendar_duration: half-year
+          
+          # Spotify plugin options
+          # You MUST add secrets for SPOTIFY_CLIENT_ID, SPOTIFY_CLIENT_SECRET, and SPOTIFY_REFRESH_TOKEN for this to work
+          plugin_spotify_user: ${{ secrets.SPOTIFY_USER }}
+          plugin_spotify_client_id: ${{ secrets.SPOTIFY_CLIENT_ID }}
+          plugin_spotify_client_secret: ${{ secrets.SPOTIFY_CLIENT_SECRET }}
+          plugin_spotify_refresh_token: ${{ secrets.SPOTIFY_REFRESH_TOKEN }}
+
+          # WakaTime plugin options
+          # You MUST add a secret for WAKATIME_API_KEY for this to work
+          plugin_wakatime_token: ${{ secrets.WAKATIME_API_KEY }}
+          plugin_wakatime_user: ABHutton
