--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,3 +29,10 @@ jobs:
           base: ""
           plugin_isocalendar: "yes"
           plugin_isocalendar_duration: full-year
+
+      - name: Lang
+        uses: lowlighter/metrics@latest
+        with:
+          plugin_languages: yes
+          plugin_languages_indepth: yes
+          commits_authoring: Alexander Hutton, ABHutton, ABHutton@users.noreply.github.com
