--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,6 +35,9 @@ jobs:
         with:
           filename: metrics.lang.svg
           token: ${{ secrets.METRICS_TOKEN }}
+          base: ""
           plugin_languages: yes
           plugin_languages_indepth: yes
           commits_authoring: Alexander Hutton, ABHutton, ABHutton@users.noreply.github.com
+          plugin_languages_details: bytes-size, percentage
+          plugin_languages_limit: 4
