--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -38,6 +38,6 @@ jobs:
           base: ""
           plugin_languages: yes
           plugin_languages_indepth: yes
-          commits_authoring: Alexander Hutton, ABHutton, ABHutton@users.noreply.github.com
-          plugin_languages_details: bytes-size, percentage
+          plugin_languages_details: lines, bytes-size
           plugin_languages_limit: 4
+          plugin_languages_analysis_timeout: 15
