--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -45,10 +45,10 @@ jobs:
       - name: GitHub Skyline
         uses: lowlighter/metrics@latest
         with:
-          filename: metrics.plugin.skyline.svg
+          filename: metrics.skyline.svg
           token: NOT_NEEDED
           base: ""
           plugin_skyline: yes
-          plugin_skyline_year: 2020
+          plugin_skyline_year: 2025
           plugin_skyline_frames: 6
           plugin_skyline_quality: 1
