--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,25 +30,15 @@ jobs:
           plugin_isocalendar: "yes"
           plugin_isocalendar_duration: full-year
 
-      - name: Lang
-        uses: lowlighter/metrics@latest
-        with:
-          filename: metrics.lang.svg
-          token: ${{ secrets.METRICS_TOKEN }}
-          base: ""
-          plugin_languages: yes
-          plugin_languages_indepth: yes
-          commits_authoring: Alexander Hutton, ABHutton, ABHutton@users.noreply.github.com
-          plugin_languages_details: lines, bytes-size
-          plugin_languages_limit: 4
-          plugin_languages_analysis_timeout: 15
-      - name: GitHub Skyline
-        uses: lowlighter/metrics@latest
-        with:
-          filename: metrics.skyline.svg
-          token: NOT_NEEDED
-          base: ""
-          plugin_skyline: yes
-          plugin_skyline_year: 2025
-          plugin_skyline_frames: 6
-          plugin_skyline_quality: 1
+      # - name: Lang
+      #   uses: lowlighter/metrics@latest
+      #   with:
+      #     filename: metrics.lang.svg
+      #     token: ${{ secrets.METRICS_TOKEN }}
+      #     base: ""
+      #     plugin_languages: yes
+      #     plugin_languages_indepth: yes
+      #     commits_authoring: Alexander Hutton, ABHutton, ABHutton@users.noreply.github.com
+      #     plugin_languages_details: lines, bytes-size
+      #     plugin_languages_limit: 4
+      #     plugin_languages_analysis_timeout: 15
